WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40956
[EFL] Do not load error message for download and cancellation
https://bugs.webkit.org/show_bug.cgi?id=40956
Summary
[EFL] Do not load error message for download and cancellation
Lucas De Marchi
Reported
2010-06-21 16:47:30 PDT
[EFL] Do not load error message for download and cancellation
Attachments
Patch
(3.47 KB, patch)
2010-06-21 16:51 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-06-21 16:51:33 PDT
Created
attachment 59311
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-25 06:13:14 PDT
Comment on
attachment 59311
[details]
Patch Clearing flags on attachment: 59311 Committed
r61857
: <
http://trac.webkit.org/changeset/61857
>
WebKit Commit Bot
Comment 3
2010-06-25 06:13:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug